--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<div class="py-5 border-top">
+<div class="py-4 border-top">
   <div class="container">
-    <p class="h5 text-center">Fait avec beaucoup d'amour et peu de talent graphique par Manon</p>
+    <p class="text-center">Fait par Manon avec beaucoup d'<i class="fa fa-heart"></i> pour Charles et peu de talent graphique</p>
   </div>
 </div>
