--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="#where">Lieu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#details">Details utiles</a>
+          <a class="nav-link" href="#details">Détails utiles</a>
         </li>
         <li class="nav-item">
           <a class="btn btn-secondary" href="#rsvp">Réponse</a>
