--- a/_includes/where.html
+++ b/_includes/where.html
@@ -1,3 +1,3 @@
-<div class="py-4 border-bottom">
+<div class="py-4 border-bottom" id="where">
   <h1 class="text-center">Ici #insert-map</h1>
 </div>
