--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,3 +7,9 @@
 @import "syntax-highlighting";
 @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
 @import "bootstrap_customization";
+
+#main-pic {
+  width: inherit;
+  max-width: 500px;
+  border: 5px solid $main-gold;
+}
