--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#details">Détails utiles</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-secondary" href="#rsvp">Réponse</a>
+          <a class="btn btn-danger" href="#rsvp">Réponse</a>
         </li>
       </ul>
     </div>
