--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,11 @@
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | relative_url }}"></script>
   <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
+  <script src="{{ "/assets/javascript/main.js" | relative_url }}"></script>
+
+  <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvLVsIuO_uOyjHbLxnIEq0TcNw8zUCvQY&callback=initMap&libraries=&v=weekly"
+    async
+  ></script>
 </head>
