--- a/_includes/what.html
+++ b/_includes/what.html
@@ -1,7 +1,7 @@
-<div class="border-bottom container" id="what">
+<div class="container section" id="what">
   <div class="py-3">
     <div class="text-center">
-      <h1>Ils vont se dire OUI !</h1>
+      <h1>Ils vont se dire OUI</h1>
       <h6>... espèrent nos parents</h6>
     </div>
   </div>
@@ -11,11 +11,11 @@
       <img src="/assets/pic.jpeg" id="main-pic"/>
     </div>
 
-    <div class="col-md-6 py-3">
-      <h3 class="text-center">Venez fêter avec nous</h3>
+    <div class="col-md-6 py-3 text">
+      <h3 class="text-center">Venez célébrer avec nous !</h3>
       <p>
         Nous avons choisi cette photo pour nos faire-parts, car c'est la première que nous avons prise comme fiancés <i class="fa fa-heart"></i>.
-        Vous êtes importants pour nous, c'est pourquoi nous souhaitons vous avoir près de nous pour prendre notre première photo comme mariés.
+        Vous êtes importants pour nous, c'est pourquoi nous souhaitons vous avoir près de nous pour prendre notre première photo en tant que jeunes mariés.
       </p>
     </div>
   </div>
