--- a/_includes/where.html
+++ b/_includes/where.html
@@ -1,3 +1,28 @@
-<div class="py-4 border-bottom" id="where">
-  <h1 class="text-center">Ici #insert-map</h1>
+<div class="container section" id="where">
+  <div class="row py-3">
+    <div class="col-md-6 py-3 text">
+      <p>
+        La cérémonie et la fête auront lieu chez nous au Canada, à Saint-Blaise-sur-Richelieu. Nous vous enverrons un courriel avec l'horaire et tous les détails pratiques pour vous rendre chez nous.
+      </p>
+
+      <p class="text-center blockquote">
+        1689 rue principale
+        <br>
+        Saint-Blaise-sur-Richelieu
+        <br>
+        J0J 1W0, QC
+        <br>
+      </p>
+
+      <p class="text-center py-3">
+        <button class="btn btn-lg btn-gold" type="button">
+          Cliquez ici pour lancer l'itinéraire dans Google Maps
+        </button>
+      </p>
+    </div>
+
+    <div class="col-md-6 text-center">
+      <div id="map"></div>
+    </div>
+  </div>
 </div>
