--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
     <a class="navbar-brand" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
@@ -9,12 +9,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#where">Lieu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#details">Détails utiles</a>
-        </li>
         <li class="nav-item">
           <a class="btn btn-danger" href="#rsvp">Réponse</a>
         </li>
