--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -112,3 +112,6 @@ $pagination-disabled-border-color:  $pagination-disabled-bg !default;
 $breadcrumb-bg:                     $primary !default;
 $breadcrumb-divider-color:          $white !default;
 $breadcrumb-active-color:           $breadcrumb-divider-color !default;
+
+// Screen size
+$screen-md-min: 768px;
