Add link to maps itinerary

--- a/_includes/where.html
+++ b/_includes/where.html
@@ -15,9 +15,9 @@
       </p>
 
       <p class="text-center py-3">
-        <button class="btn btn-lg btn-gold" type="button">
+        <a class="btn btn-lg btn-gold" type="button" target="_blank" href="https://www.google.com/maps/dir/?api=1&destination=45.23207409855136%2C-73.31837062403082">
           Cliquez ici pour lancer l'itinéraire dans Google Maps
-        </button>
+        </a>
       </p>
     </div>
 
