--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,10 +27,10 @@
   }
 }
 
-@media (min-width: 767) {
+@media (min-width: 767px) {
   .section {
     .text {
-      margin-top: 30px;
+      margin-top: 20px;
     }
   }
 }
