--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -1,3 +1,6 @@
-<div class="py-4 border-bottom" id="rsvp">
-  <h1 class="text-center">RSVP form</h1>
+<div class="container section" id="rsvp">
+  <h3 class="py-3 text-center">
+    Merci de nous faire part de votre présence ou absence avant le <strong>1er juillet 2022</strong>
+    en nous envoyant un courriel à <a href="mailto:manon.deloupy@gmail.com">manon.deloupy@gmail.com</a>
+  </h3>
 </div>
