--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -1,4 +1,4 @@
-<div class="container section" id="rsvp">
+<div class="container" id="rsvp">
   <h3 class="py-3 text-center">
     Merci de nous faire part de votre présence ou absence avant le <strong>1er juillet 2022</strong>
     en nous envoyant un courriel à <a href="mailto:manon.deloupy@gmail.com">manon.deloupy@gmail.com</a>
