--- a/_includes/where.html
+++ b/_includes/where.html
@@ -6,7 +6,7 @@
       </p>
 
       <p class="text-center blockquote">
-        1689 rue principale
+        1689 rue Principale
         <br>
         Saint-Blaise-sur-Richelieu
         <br>
