--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="py-4 border-top">
+<div class="py-3 border-top" id="footer">
   <div class="container">
     <p class="text-center">Fait par Manon avec beaucoup d'<i class="fa fa-heart"></i> pour Charles et peu de talent graphique</p>
   </div>
