--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="py-3 border-top" id="footer">
   <div class="container">
-    <p class="text-center">Fait par Manon avec beaucoup d'<i class="fa fa-heart"></i> pour Charles et peu de talent graphique</p>
+    <p class="text-center">Fait par Manon avec beaucoup d'<i class="fa fa-heart"></i> pour Charles et très peu de talent graphique</p>
   </div>
 </div>
