--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -1,33 +1,40 @@
 <div class="container" id="rsvp">
-  <h3 class="py-3 text-center">
+  <p class="py-3 text">
     Merci de nous faire part de votre présence ou absence avant le <strong>1er juillet 2022</strong>
-    en nous envoyant un courriel à <a href="mailto:manon.deloupy@gmail.com">manon.deloupy@gmail.com</a>
-  </h3>
-  <!-- <p class="py-3 text"> -->
-  <!--   Merci de nous faire part de votre présence ou absence avant le <strong>1er juillet 2022</strong> -->
-  <!--   en remplissant le formulaire ci-dessous. -->
-  <!-- </p> -->
+    en remplissant le formulaire ci-dessous.
+  </p>
 
-  <!-- <form id="rsvp-form" class="rsvp-form" action="" method="POST"> -->
-  <!--   <div class="form-group mt-4"> -->
-  <!--     <label for="name" class="col-form-label-lg">Votre nom complet</label> -->
-  <!--     <input type="text" name="name" class="form-control form-control-lg" id="name" required> -->
-  <!--   </div> -->
+  <form id="rsvp-form">
+    <div class="form-group mt-4">
+      <label for="name" class="col-form-label-lg">
+        Votre nom complet
+        <small class="required">Obligatoire</small>
+      </label>
+      <input type="text" name="name" class="form-control form-control-lg" id="name" required>
+    </div>
 
-  <!--   <div class="form-group mt-4"> -->
-  <!--     <label for="name2" class="col-form-label-lg">Nom de votre accompagnant</label> -->
-  <!--     <input type="text" name="name2" class="form-control form-control-lg" id="name2"> -->
-  <!--   </div> -->
+    <div class="form-group mt-4">
+      <label for="name2" class="col-form-label-lg">
+        Nom de votre accompagnant
+      </label>
+      <input type="text" name="name2" class="form-control form-control-lg" id="name2">
+    </div>
 
-  <!--   <div class="form-group mt-4"> -->
-  <!--     <label for="email" class="col-form-label-lg">Votre courriel</label> -->
-  <!--     <input type="email" name="email" class="form-control form-control-lg" id="email" required> -->
-  <!--   </div> -->
+    <div class="form-group mt-4">
+      <label for="email" class="col-form-label-lg">
+        Votre courriel
+        <small class="required">Obligatoire</small>
+      </label>
+      <input type="email" name="email" class="form-control form-control-lg" id="email" required>
+    </div>
 
-  <!--   <div class="form-group mt-4"> -->
-  <!--     <a class="btn btn-lg btn-gold btn-block" type="submit"> -->
-  <!--       Je serai présent -->
-  <!--     </a> -->
-  <!--   </div> -->
-  <!-- </form> -->
+    <div class="form-group mt-4">
+      <label for="message" class="col-form-label-lg">Si vous souhaitez nous laisser un petit message</label>
+      <textarea type="message" name="message" class="form-control form-control-lg" id="message"></textarea>
+    </div>
+
+    <div class="form-group mt-4">
+      <input class="btn btn-lg btn-gold btn-block" type="submit" value="Je serai présent">
+    </div>
+  </form>
 </div>
