--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -4,7 +4,7 @@
     en remplissant le formulaire ci-dessous.
   </p>
 
-  <form id="rsvp-form">
+  <form id="rsvp-form" action="" method="POST">
     <div class="form-group mt-4">
       <label for="name" class="col-form-label-lg">
         Votre nom complet
