--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,6 +41,13 @@
   }
 }
 
+#rsvp {
+  p {
+    padding-bottom: 0 !important;
+    margin-bottom: 0 !important;
+  }
+}
+
 .section {
   .text {
     text-align: justify;
