--- a/_includes/where.html
+++ b/_includes/where.html
@@ -2,7 +2,8 @@
   <div class="row py-3">
     <div class="col-md-6 py-3 text">
       <p>
-        La cérémonie et la fête auront lieu chez nous au Canada, à Saint-Blaise-sur-Richelieu. Nous vous enverrons un courriel avec l'horaire et tous les détails pratiques pour vous rendre chez nous.
+        La cérémonie et la fête auront lieu chez nous au Canada, à Saint-Blaise-sur-Richelieu. Nous habitons sur une fermette, et la cérémonie aura lieu dans notre champ.
+        Nous vous recommendons de prévoir des chaussures confortables car vous pourriez avoir à marcher dans l'herbe et le gravier.
       </p>
 
       <p class="text-center blockquote">
