Add alerts & improve js

--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -4,6 +4,16 @@
     en remplissant le formulaire ci-dessous.
   </p>
 
+  <div id="rsvp-success" class="alert alert-success d-none">
+    Nous avons bien reçu votre réponse. Nous vous contacterons par courriel avec l'horaire et tous les détails utiles pour que cette belle journée se passe au mieux.
+    Nous avons hate de vous y voir !
+  </div>
+
+  <div id="rsvp-error" class="alert alert-danger d-none">
+    Votre réponse n'a malheureusement pas pu être sauvegardée.
+    Merci de nous envoyer votre réponse avec votre nom, votre adresse courriel et le nom de votre accompagnant par courriel.
+  </div>
+
   <form id="rsvp-form" action="" method="POST">
     <div class="form-group mt-4">
       <label for="name" class="col-form-label-lg">
