--- a/_includes/rsvp.html
+++ b/_includes/rsvp.html
@@ -1,14 +1,4 @@
-<div class="container" id="rsvp">
-  <!-- <h3> -->
-  <!--   Merci de nous faire part de votre présence ou absence avant le <strong>1er juin 2022</strong> -->
-  <!--   en nous envoyant un courriel à <a href="mailto:manon.deloupy@gmail.com?subject=RSVP - Mariage Manon et Charles&body=Mon nom et celui de mon accompagnant:">manon.deloupy@gmail.com</a> -->
-  <!-- </h3> -->
-
-  <!-- <p class="py-3"> -->
-  <!--   Nous vous enverrons un courriel sous peu avec toutes les informations pratiques pour le jour J. -->
-  <!--   N'hésitez pas à nous contacter d'ici là si vous avez des questions. Nous avons hate de vous voir ! -->
-  <!-- </p> -->
-
+<div class="container section" id="rsvp">
   <p class="py-3 text">
     Merci de nous faire part de votre présence ou absence avant le <strong>1er juin 2022</strong>
     en remplissant le formulaire ci-dessous.
