Add sections w borders

--- a/_includes/what.html
+++ b/_includes/what.html
@@ -11,7 +11,7 @@
       <img src="/assets/pic.jpeg" id="main-pic"/>
     </div>
 
-    <div class="col-md-6 py-3 text">
+    <div class="col-md-6 text">
       <h3 class="text-center">Venez célébrer avec nous !</h3>
       <p>
         Nous avons choisi cette photo pour nos faire-parts, car c'est la première que nous avons prise comme fiancés <i class="fa fa-heart"></i>.
