Add contact section

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -115,3 +115,4 @@ $breadcrumb-active-color:           $breadcrumb-divider-color !default;
 
 // Screen size
 $screen-md-min: 768px;
+$screen-lg-min: 992px;
