--- a/_includes/what.html
+++ b/_includes/what.html
@@ -8,7 +8,7 @@
 
   <div class="row py-3">
     <div class="col-md-6 text-center">
-      <img src="/assets/pic.jpeg" id="main-pic"/>
+      <img src="/assets/pic.jpeg" class="main-pic"/>
     </div>
 
     <div class="col-md-6 text">
