--- a/_includes/where.html
+++ b/_includes/where.html
@@ -15,7 +15,7 @@
         <br>
       </p>
 
-      <div class="text-center py-3">
+      <div class="text-center">
         <a class="btn btn-gold" type="button" target="_blank" href="https://www.google.com/maps/dir/?api=1&destination=45.23207409855136%2C-73.31837062403082">
           Cliquez ici pour lancer l'itinéraire dans Google Maps
         </a>
