--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     {%- include what.html -%}
     {%- include where.html -%}
     {%- include rsvp.html -%}
+    {%- include contact.html -%}
     {%- include footer.html -%}
   </body>
 </html>
