--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,13 +15,20 @@
     font-size: 3.5rem;
   }
 
-  #main-pic {
-    width: inherit;
-    border: 5px solid $main-gold;
-  }
-
   .text {
     margin-top: 20px
+  }
+}
+
+#where {
+  #map {
+    width: inherit;
+    border: 5px solid $main-gold;
+    height: 350px;
+  }
+
+  .blockquote {
+    font-size: 25px;
   }
 }
 
@@ -61,19 +68,34 @@
   display: block;
 }
 
+.main-pic {
+  width: inherit;
+  border: 5px solid $main-gold;
+}
+
+#contact {
+  .name {
+    border-bottom: 1px dashed $main-gold;
+  }
+}
+
 @media (min-width: 767px) {
   #what {
-    padding-bottom: 20px;
+    padding: 20px 0;
   }
 
   #rsvp {
     padding-top: 20px;
-    max-width: 700px;
+    max-width: 820px;
     margin: auto;
-    border: none;
   }
 
   #where {
+    padding: 20px 0;
+  }
+
+  #contact {
+    border: none;
     padding-top: 20px;
   }
 }
@@ -84,7 +106,6 @@
   }
 
   .section {
-    // border-bottom: 1px solid $main-gold;
     margin-bottom: 20px;
   }
 
@@ -96,20 +117,17 @@
     padding-bottom: 2rem;
   }
 
-  #rsvp {
+  #contact{
     border-bottom: none;
+    margin-bottom: 0;
   }
 }
 
-#where {
-  #map {
-    width: inherit;
-    border: 5px solid $main-gold;
-    height: 350px;
-  }
-
-  .blockquote {
-    font-size: 25px;
+@media (min-width: $screen-lg-min) {
+  #contact, #what {
+    .text {
+      padding-top: 50px;
+    }
   }
 }
 
