--- a/_includes/where.html
+++ b/_includes/where.html
@@ -3,7 +3,7 @@
     <div class="col-md-6 py-3 text">
       <p>
         La cérémonie et la fête auront lieu chez nous au Canada, à Saint-Blaise-sur-Richelieu. Nous habitons sur une fermette, et la cérémonie aura lieu dans notre champ.
-        Nous vous recommendons de prévoir des chaussures confortables car vous pourriez avoir à marcher dans l'herbe et le gravier.
+        <!-- Nous vous recommendons de prévoir des chaussures confortables car vous pourriez avoir à marcher dans l'herbe et le gravier. -->
       </p>
 
       <p class="text-center blockquote">
