--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     {%- include where.html -%}
     {%- include rsvp.html -%}
     {%- include contact.html -%}
+    {%- include faq.html -%}
     {%- include footer.html -%}
   </body>
 </html>
