Update pic path

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
 
   <div class="row py-3">
     <div class="col-md-6 text-center">
-      <img src="/assets/contact.jpg" class="main-pic"/>
+      <img src="/assets/contact-main.jpg" class="main-pic"/>
     </div>
 
     <div class="col-md-6 text">
