--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -1,5 +1,72 @@
-<div class="container section d-none" id="faq">
-  <div class="py-3">
-    <h2 class="text-center">FAQ</h2>
+<div class="container section" id="faq">
+  <div class="py-3 text-center">
+    <h2>FAQ</h2>
+    <p class="lead">Afin que nous puissions tous profiter au mieux de cette journée, voilà quelques informations utiles.</p>
+  </div>
+
+  <div class="card border-warning mb-3">
+    <div class="card-header">Horaire de la journée</div>
+    <div class="card-body">
+      <strong>Nous vous attendons dès 15h30.</strong> L’horaire sera le suivant :
+      <ul>
+        <li><strong>16h</strong> : Cérémonie</li>
+        <li><strong>17h-18h30</strong> : Cocktail avec musique live et photos</li>
+        <li><strong>18h30</strong> : Souper et soirée avec DJ Cap10 et open-bar</li>
+      </ul>
+      Notez que l'horaire pourrait être sujet à changement. Nous vous enverrons un courriel de confirmation une semaine avant l'évènement.
+    </div>
+  </div>
+
+  <div class="card border-warning mb-3">
+    <div class="card-header">Liste de mariage</div>
+    <div class="card-body">
+      <p>
+        Nous ne prévoyons pas de liste de mariage car nous avons la chance de ne manquer de rien. À la place, si vous le souhaitez, vous pouvez contribuer au voyage de noces de nos rêves en Thailande.
+        Il y aura une boite spéciale à cet effet sur place, avec des enveloppes.
+      </p>
+      <p>
+        Si vous souhaitez contribuer par virement, vous pouvez le faire sur Honeyfund sur notre page spéciale en cliquant sur le lien ci-dessous :
+        <div class="text-center">
+          <a class="btn btn-gold" type="button" target="_blank" href="https://www.honeyfund.com/wedding/mariage-manon-et-charles">
+            Cliquez ici pour contribuer à notre voyage de noces
+          </a>
+        </div>
+      </p>
+    </div>
+  </div>
+
+  <div class="card border-warning mb-3">
+    <div class="card-header">Mes enfants sont-ils invités ?</div>
+    <div class="card-body">
+      Afin que chacun profite au maximum de l’évènement et de l’open-bar, nous préférons rester entre adultes. S’il vous est impossible de faire garder vos enfants, communiquez avec nous le plus tôt possible afin que nous trouvions une solution ensemble.
+    </div>
+  </div>
+
+  <div class="card border-warning mb-3">
+    <div class="card-header">Stationnement</div>
+    <div class="card-body">
+      A votre arrivée, suivez les panneaux indicatifs et allez vous garer dans le premier champ. Un préposé sera sur place pour vous indiquer où vous garer afin que chacun soit libre de partir à l’heure qu’il souhaite sans avoir à déplacer de véhicules.
+    </div>
+  </div>
+
+  <div class="card border-warning mb-3">
+    <div class="card-header">Tenue vestimentaire</div>
+    <div class="card-body">
+      <p>Le mariage au complet (cérémonie + soirée) aura lieu en extérieur chez nous, dans un grand champ gazonné. Nous vous recommandons de prévoir des chaussures adéquates, ainsi que des vêtements chauds pour le soir. Prenez note qu’une fois le soleil couché, l’herbe peut devenir humide et fraiche.</p>
+      <p>Je conseille vivement à toutes les femmes de prévoir une paire de chaussures fermées en extra pour la fin de soirée, afin que vous soyez le plus confortable possible jusqu’au bout de la nuit !</p>
+    </div>
+  </div>
+
+  <div class="card border-warning mb-3">
+    <div class="card-header">Hébergement</div>
+    <div class="card-body">
+      Si vous avez besoin d’hébergement, nous vous recommandons 2 hôtels à Saint-Jean-sur-Richelieu à environ 15 minutes de chez nous. Voici leurs coordonnées :
+      <ul>
+        <li><a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/st-jean-sur-richelieu/zbmqc/hoteldetail">Holiday Inn</a></li>
+        <li><a href="https://www.qualityhotelstjean.com/">Quality Inn</a></li>
+      </ul>
+
+      Ceux qui le souhaitent peuvent bien sur planter leur tente ou garer leur roulotte sur notre terrain. Réveil bucolique au chant du coq garanti ! Ecrivez-nous si vous prévoyez d'arriver avec une roulotte.
+    </div>
   </div>
 </div>
