link to registry

--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -27,7 +27,7 @@
       <p>
         Si vous souhaitez contribuer par virement, vous pouvez le faire sur Honeyfund sur notre page spéciale en cliquant sur le lien ci-dessous :
         <div class="text-center">
-          <a class="btn btn-gold" type="button" target="_blank" href="https://www.honeyfund.com/wedding/mariage-manon-et-charles">
+          <a class="btn btn-gold" type="button" target="_blank" href="https://www.honeyfund.com/wedding/mariage-manon-et-charles#registry">
             Cliquez ici pour contribuer à notre voyage de noces
           </a>
         </div>
